fix: spinner now is visible

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 #overlay {
   position: absolute;
-  display: none;
+  /* display: none; */
   top: 0;
   left: 0;
   right: 0;
